package Formas;

public interface Forma {
    double calcularArea();
}